kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brdresort
  labels:
    name: brdresort
    app: brdresort
