kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brdresort-service
  namespace: brdresort
  labels:
    app: brdresort
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: brdresort
